--- a/demo/index.html
+++ b/demo/index.html
@@ -34,8 +34,8 @@
 	
 </div>
 
-<script src="../bower_components/json-editor/dist/jsoneditor.js"></script>
-<script src="../bower_components/angular/angular.js"></script>
+<script src="../../json-editor/dist/jsoneditor.js"></script>
+<script src="../../angular/angular.js"></script>
 <script src="../dist/angular-props-widget.min.js"></script>
 <script src="app.js"></script>
 
